# ETL-dicoding

./: .gitignore  README.md  extract.py  main.py  pyproject.toml  requirements.txt  setup.py  submission.txt
tests/: test_extract.py  test_load.py  test_transform.py
utils/: extract.py  load.py  transform.py
