[project]
name = "etl-dicoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.1.31",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "setuptools>=79.0.1",
    "sqlalchemy>=2.0.40",
]
